syntax = "proto3";

package js.v1;

import "google/protobuf/any.proto";
import "google/type/datetime.proto";

option go_package = "github.com/tkxkd0159/buf-proto/buf-tutorial/types";

message AllType {
  float float32 = 1;
  double float64 = 2;
  int32 int32 = 3;
  int64 int64 = 4;
  uint32 uint32 = 5;
  uint64 uint64 = 6;
  sint32 int32_2 = 7; // These more efficiently encode negative numbers than regular int32s.
  sint64 int64_2 = 8;
  fixed32 uint32_2 = 9; // Always four bytes. More efficient than uint32 if values are often greater than 2^28.
  fixed64 uint64_2 = 10; // Always eight bytes. More efficient than uint64 if values are often greater than 2^56.
  sfixed32 int32_3 = 11; // Always four bytes.
  sfixed64 int64_3 = 12; // Always eight bytes.
  bool bool = 13; // the default value is false.
  repeated string string = 14; // the default value is the empty string.
  bytes byte_slice = 15; // the default value is empty bytes.
  map<string, string> map = 16;
  EnumType enum = 17;

  // If the Any contains a value that has a special JSON mapping,
  // it will be converted as follows: {"@type": xxx, "value": yyy}.
  // Otherwise, the value will be converted into a JSON object
  repeated AnyType any = 18;
  optional google.type.DateTime created_at = 19;
}

enum EnumType {
  ENUM_TYPE_UNKNOWN_UNSPECIFIED = 0;
  ENUM_TYPE_STARTED = 1;
  ENUM_TYPE_RUNNING = 2;
  ENUM_TYPE_STOPPED = 3;
}

message AnyType {
  google.protobuf.Any any = 1;
}

message AnyTarget {
  int64 id = 1;
  string name = 2;
}

message AnyTargetExtend {
  int64 id = 1;
  string name = 2;
  string description = 3;
}